
#ifndef SCHOOL_H
#define SCHOOL_H

#include <string.h>

using namespace std;

class School {

    ///////////////////////////////
    // Declaration of the variables
    ///////////////////////////////
  private:
    
  public:
    
};

#endif