@startuml

Class AbstractSchool {
	{field} <b>abundance</b> : Number of fish in the school at the beginning of the time-step
	{field} <b>biomass</b> : Biomass of the school at the beginning of the school (tons)
	{field} <b>discardedBiomass</b> : Biomass of the school that has been discarded by each fishing gear (tons)
	{field} <b>fishedBiomass</b> : Biomass of the school that has been landed by each fishing gear (tons)
	{field} <b>nDead</b> : Number of dead fish in the current time \nstep for each mortality cause (predation, fishing, natural mortality, starvation)
	{field} <b>predSuccessRate</b> : Predation success rate (%)
	{field} <b>preyedBiomass</b> : Biomass of prey ingested by the school at current time step (tons)
	{field} <b>preys</b> : List of preys eaten by the school
	{field} <b>uuid</b> : Unique identifier of the individual
	{field} <b>lat</b> : Latitude of the individual
    {field} <b>lon</b> : Longitude of the individual
	{field} <b>x</b> : i-index of the individual in the 2D grid
	{field} <b>y</b> : j-index of the individual in the 2D grid
	' {field} <b>abundanceHasChanged</b> : boolean
	' {field} <b>accessibility</b> : [D
	' {field} <b>ageDeath</b> : [D
}

class School {
	{field} <b>age</b> : Age of the school (years)
	{field} <b>eggRetained</b> : Buffer variable that will temporarily retain some eggs inside a time step
	{field} <b>length</b> : Length of the individuals in the school (cm)
	{field} <b>lengthi</b> : Length of the individuals in the \nschool at the beginning of the time-step (cm)
	{field} <b>out</b> : True if the school is out of the computation domain.
	{field} <b>starvationRate</b> : Starvation rate of the school
	{field} <b>trophicLevel</b> : Trophic level of the school
	{field} <b>weight</b> : Weight of the school (tons)
}

class BackgroundSchool {
	{field} <b>classIndex</b> : Class index to which belongs the school
}

School --|> AbstractSchool
BackgroundSchool --|> AbstractSchool

@enduml